Fix bugs related to loading Twists
Improve edge case handling and rename manual update button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -98,7 +98,7 @@
 <button id="manual-update-button" class="button button-block"
     onclick="htmx.trigger(document.body, 'manualTwistUpdate');">
 
-    <i class="fa-solid fa-arrows-rotate"></i> Update Twists
+    <i class="fa-solid fa-magnifying-glass"></i> Search this area
 </button>
 
 <dialog id="modal-login" class="modal">
