Create single source of truth for events
Close #57. Also standardize access patterns for settings and events
across the app.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1110,9 +1110,9 @@ aside {
 }
 
 
-/* --- Manual Update Button --- */
+/* --- Refresh Twists Button --- */
 
-#manual-update-button {
+#refresh-twists-button {
     position: fixed;
     bottom: var(--padding-sm);
     left: 50%;
@@ -1123,10 +1123,10 @@ aside {
 
     transform: translateX(-50%);
     transition: opacity var(--transition-fade);
-}
 
-#manual-update-button.button--visible {
-    opacity: 1;
+    &.button--visible {
+        opacity: 1;
+    }
 }
 
 
