--- a/app/templates/fragments/debug/menu_button.html
+++ b/app/templates/fragments/debug/menu_button.html
@@ -1,8 +1,8 @@
 <a href="/debug"
-   class="button button-block {% if not (settings.DEBUG_MODE and user and user.is_superuser) %}gone{% endif %}"
+   class="button button-block {% if not (SETTINGS.DEBUG_MODE and user and user.is_superuser) %}gone{% endif %}"
 
    hx-get="/debug/templates/menu-button"
-   hx-trigger="authChange from:body"
+   hx-trigger="{{ EVENTS.AUTH_CHANGE }} from:body"
    hx-swap="outerHTML">
 
     Debug Menu
