--- a/app/templates/fragments/new_version.html
+++ b/app/templates/fragments/new_version.html
@@ -1,4 +1,4 @@
-<a href="https://github.com/{{ upstream }}/releases/latest"
+<a href="https://github.com/{{ settings.MOTOTWIST_UPSTREAM }}/releases/latest"
     target="_blank"
     class="button button-link update-available"
     title="Click to view the latest release">
