--- a/app/templates/fragments/twists/list.html
+++ b/app/templates/fragments/twists/list.html
@@ -18,7 +18,7 @@
         hx-ext="morph"
         hx-target="next .twist-dropdown"
         hx-swap="morph:innerHTML"
-        hx-trigger="loadDropdown">
+        hx-trigger="{{ EVENTS.LOAD_DROPDOWN }}">
 
         <span class="twist-name">{{ twist.name }}</span>
         <span>
