auth-widget now updated by authChange
Close #61. No longer returned by endpoints that trigger authChange.

--- a/app/templates/fragments/auth/widget.html
+++ b/app/templates/fragments/auth/widget.html
@@ -1,35 +1,32 @@
-<div id="auth-widget" class="{% if user %}auth-dropdown{% endif %}">
-    {% if user %}
-    <button class="button button-block auth-display">{{ user.name }}</button>
-    <div class="auth-dropdown-menu">
-        <button class="button button-block" onclick="document.querySelector('#modal-profile').showModal()"
-            hx-get="/users/templates/profile-modal"
-            hx-target="#modal-profile"
-            hx-swap="innerHTML">
+{% if user %}
+<button class="button button-block auth-display">{{ user.name }}</button>
+<div class="auth-dropdown-menu">
+    <button class="button button-block" onclick="document.querySelector('#modal-profile').showModal()"
+        hx-get="/users/templates/profile-modal"
+        hx-target="#modal-profile"
+        hx-swap="innerHTML">
 
-            Profile
-        </button>
+        Profile
+    </button>
 
-        {% if user.is_superuser %}
-        <button class="button button-block" onclick="document.querySelector('#modal-admin-settings').showModal()"
-            hx-get="/admin/templates/settings-modal"
-            hx-target="#modal-admin-settings"
-            hx-swap="innerHTML">
+    {% if user.is_superuser %}
+    <button class="button button-block" onclick="document.querySelector('#modal-admin-settings').showModal()"
+        hx-get="/admin/templates/settings-modal"
+        hx-target="#modal-admin-settings"
+        hx-swap="innerHTML">
 
-            Admin Settings
-        </button>
-        {% endif %}
-        <button class="button button-block"
-            hx-post="/logout"
-            hx-target="#auth-widget"
-            hx-swap="outerHTML">
-
-            Logout
-        </button>
-    </div>
-    {% else %}
-    <button class="button button-block auth-button" onclick="document.querySelector('#modal-login').showModal()">
-        Login
+        Admin Settings
     </button>
     {% endif %}
+    <button class="button button-block"
+        hx-post="/logout"
+        hx-swap="none">
+
+        Logout
+    </button>
 </div>
+{% else %}
+<button class="button button-block auth-button" onclick="document.querySelector('#modal-login').showModal()">
+    Login
+</button>
+{% endif %}
