--- a/app/templates/fragments/users/profile_modal.html
+++ b/app/templates/fragments/users/profile_modal.html
@@ -4,7 +4,7 @@
 <form class="modal-form manual-validation"
     hx-put="/users"
     hx-target="#auth-widget"
-    hx-swap="outerHTML">
+    hx-swap="innerHTML">
 
     <div class="form-group">
         <label for="name">Name</label>
@@ -40,15 +40,13 @@
         <div class="button-group">
             <button type="button" class="button button-block button-deactivate"
                     hx-post="/users/deactivate"
-                    hx-target="#auth-widget"
-                    hx-swap="outerHTML"
+                    hx-swap="none"
                     hx-confirm="Are you sure you want to deactivate your account? This action can only be undone by an administrator.">
                 Deactivate Account
             </button>
             <button type="button" class="button button-block button-delete"
                     hx-delete="/users"
-                    hx-target="#auth-widget"
-                    hx-swap="outerHTML"
+                    hx-swap="none"
                     hx-confirm="Are you sure you want to permanently delete your account? This action cannot be undone.">
                 Delete Account
             </button>
