--- a/app/templates/debug.html
+++ b/app/templates/debug.html
@@ -39,13 +39,13 @@
                 <input type="file" id="json-file" name="json_file" accept=".json,application/json" required>
             </div>
             <div class="button-group">
-                <span class="debug-label">Load database state from JSON File</span>
+                <span class="button-group-label">Load database state from JSON File</span>
                 <button type="submit" class="button button-block">Load State</button>
             </div>
         </form>
         <form class="modal-form" method="POST" action="/debug/save">
             <div class="button-group">
-                <span class="debug-label">Save the database state to a JSON file</span>
+                <span class="button-group-label">Save the database state to a JSON file</span>
                 <button type="submit" class="button button-block">Save State</button>
             </div>
         </form>
@@ -71,13 +71,13 @@
                 <input type="number" step="0.1" id="distribution_focus" name="distribution_focus" value="2.5" required>
             </div>
             <div class="button-group">
-                <span class="debug-label">Create ratings based on the above parameters</span>
+                <span class="button-group-label">Create ratings based on the above parameters</span>
                 <button type="submit" class="button button-block">Seed Data</button>
             </div>
         </form>
         <form class="modal-form" method="GET" action="/">
             <div class="button-group">
-                <span class="debug-label">Return to MotoTwist</span>
+                <span class="button-group-label">Return to MotoTwist</span>
                 <button type="submit" class="button button-block">Done</button>
             </div>
         </form>
