--- a/app/templates/fragments/users/profile_modal.html
+++ b/app/templates/fragments/users/profile_modal.html
@@ -28,6 +28,24 @@
 
     {{ render_form_buttons(submit_text="Save") }}
 </form>
+
+{% if not user.is_verified %}
+<form class="modal-form">
+    <div class="danger-zone">
+        <h3>Account Actions</h3>
+        <div class="button-group">
+            <span class="button-group-label">Your email is not currently verified.</span>
+            <button type="button" class="button button-block"
+                hx-post="/users/verify"
+                hx-swap="none">
+
+                Resend Verification
+            </button>
+        </div>
+    </div>
+</form>
+{% endif %}
+
 <form class="modal-form">
     <div class="danger-zone">
         <h3>Danger Zone!</h3>
