Overdue README update

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <aside>
-    <h1>MotoTwist</h1>
+    <h1>{{ SETTINGS.MOTOTWIST_INSTANCE_NAME }}</h1>
     {% include "fragments/twists/creation_buttons.html" %}
 
     <form id="twist-filter-form"
