--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}MotoTwist{% endblock %}</title>
+    <title>{% block title %}{{ SETTINGS.MOTOTWIST_INSTANCE_NAME }}{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
 
     {% if SETTINGS %}
