Add cooldown for email actions
Also fix forgot password button submitting login if form is valid.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -122,7 +122,7 @@
             </div>
 
             {% if SETTINGS.EMAIL_ENABLED %}
-            <button class="button button-very-small button-link"
+            <button type="button" class="button button-very-small button-link"
                 onclick="document.querySelector('#modal-forgot-password').showModal()">
 
                 Forgot password?
