--- a/app/templates/fragments/twists/creation_buttons.html
+++ b/app/templates/fragments/twists/creation_buttons.html
@@ -3,8 +3,12 @@
     hx-trigger="{{ EVENTS.AUTH_CHANGE }} from:body"
     hx-swap="outerHTML">
 
-    {% if user %}
-    {% if user.is_verified %}
+    {% if not user %}
+    <h4>Register or Login to create Twists!</h4>
+    {% else %}
+    {% if not user.is_verified and SETTINGS.EMAIL_ENABLED %}
+    <h4>Verify your account to create Twists!</h4>
+    {% else %}
     <button id="start-new-twist" class="button button-block twist-creation-button">
         New Twist
     </button>
@@ -16,10 +20,6 @@
     <button id="cancel-new-twist" class="button button-block button-cancel twist-creation-button gone">
         Cancel
     </button>
-    {% else %}
-    <h4>Verify your account to create Twists!</h4>
     {% endif %}
-    {% else %}
-    <h4>Register or Login to create Twists!</h4>
     {% endif %}
 </div>
