--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -363,10 +363,28 @@ input[type="date"] {
 /* --- Map --- */
 
 #map {
+    position: relative;
     flex-grow: 1;
 
     &.creating-twist {
         cursor: crosshair;
+    }
+
+    > #refresh-twists-button {
+        position: absolute;
+        bottom: var(--padding-lg);
+        left: 50%;
+        z-index: 1000;
+        opacity: 0;
+        box-shadow: var(--shadow-flash);
+        border-radius: var(--radius-md);
+
+        transform: translateX(-50%);
+        transition: opacity var(--transition-fade);
+
+        &.button--visible {
+            opacity: 1;
+        }
     }
 }
 
@@ -1167,26 +1185,6 @@ aside {
     }
     100% {
         transform: rotate(360deg);
-    }
-}
-
-
-/* --- Refresh Twists Button --- */
-
-#refresh-twists-button {
-    position: fixed;
-    bottom: var(--padding-sm);
-    left: 50%;
-    z-index: 1000;
-    opacity: 0;
-    box-shadow: var(--shadow-flash);
-    border-radius: var(--radius-md);
-
-    transform: translateX(-50%);
-    transition: opacity var(--transition-fade);
-
-    &.button--visible {
-        opacity: 1;
     }
 }
 
